<resources>
    <string name="app_name">Cartoon Character</string>
    <string name="cartoon_character">Cartoon Character</string>
    <string name="name">Name</string>
    <string name="error_message">Error message</string>
    <string name="retry">Retry</string>
    <string name="character_details">Character Details</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="species">Species</string>
    <string name="details_name_text"><![CDATA[ <b>Name : </b> %1$s]]></string>
    <string name="details_gender_text"><![CDATA[ <b>Gender : </b> %1$s]]></string>
    <string name="details_species_text"><![CDATA[ <b>Species : </b> %1$s]]></string>
    <string name="details_status_text"><![CDATA[ <b>Status : </b> %1$s]]></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
</resources>