<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="?attr/selectableItemBackground"
        app:contentPaddingTop="20dp"
        app:contentPaddingBottom="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/character_details"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/cartoonImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintHorizontal_weight="0.3"
                app:layout_constraintEnd_toStartOf="@id/detailsLinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailTitle"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/detailsLinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.7"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cartoonImage"
                app:layout_constraintTop_toTopOf="@id/cartoonImage">

                <TextView
                    android:id="@+id/cartoonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/name"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/cartoonGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/gender"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/cartoonSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/species"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/cartoonStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/status"
                    android:textSize="18sp"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>